--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 		<div class="right-content-title">
                                 			Java розробник
                                 		</div>
-                                		<div>вер. 2009 - теп. час</div>
+                                		<div class="right-content-text">вер. 2009 - теп. час</div>
                                 	</div>
                                 	<div class="value-name">
                                         EPAM, Київ
