--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								</li>
 								<li>
 									<div class="content-title">
-										Адресса
+										Адреса
 									</div>
 									<div class="content-text">
 										вул.Симоненка, 9а кв.85 Івано-Франківськ
@@ -48,7 +48,7 @@
 										Email
 									</div>
 									<div class="content-text">
-										<a href="malito:tolik102007@gmail.com">tolik102007@gmail.com</a>
+										<a href="mailto:tolik102007@gmail.com">tolik102007@gmail.com</a>
 									</div>
 								</li>
 								<li>
