--- a/index.html
+++ b/index.html
@@ -264,6 +264,13 @@
                                         </div>
                                     </div>    
                                 </li>
+				<li>
+                                    <div class="right-title-text">
+                                        <div class="right-content-title">
+                                        <a href="https://tolikkurylo.github.io/katalog/index.html">Katalog</a>
+                                        </div>
+                                    </div>    
+                                </li>
                             </ol>
                         </div>
                     </div>
